reset-password mis en place

--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,3 +1,10 @@
 framework:
     mailer:
         dsn: '%env(MAILER_DSN)%'
+        envelope:
+            sender: 'mohamedguiliano@hotmail.fr'
+            recipients: ['mohamedguiliano@hotmail.fr', 'mohamedguiliano@yahoo.com']
+        headers:
+            From: 'mohamedguiliano <mohamedguiliano@hotmail.fr>'
+            Bcc: 'baz@example.com'
+            X-Custom-Header: 'foobar'
