--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
 app_logout:
     path: /logout
     methods: GET
+
+dashboard:
+    path: /admin
+    controller: App\Controller\Admin\DashboardController::index
